--- a/Frontend/ProEventos-App/src/app/app.component.html
+++ b/Frontend/ProEventos-App/src/app/app.component.html
@@ -1,10 +1,8 @@
-<h1>Eventos</h1>
+<div class="container">
+  <app-nav></app-nav>
 
-<app-eventos></app-eventos>
+  <app-eventos></app-eventos>
 
-<h1>Palestrantes</h1>
-
-<app-palestrantes></app-palestrantes>
+</div>
 
 <router-outlet></router-outlet>
-
